--- a/ServerMessaging.SampleApplication/MainWindow.xaml
+++ b/ServerMessaging.SampleApplication/MainWindow.xaml
@@ -3,13 +3,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModels="clr-namespace:ServerMessaging.SampleApplication.ViewModels"
+        xmlns:controls="clr-namespace:ServerMessaging.SampleApplication.Views.Controls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=MainViewModel}">
     <Grid>
         <TabControl ItemsSource="{Binding Terminals}">
             <TabControl.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate DataType="{x:Type viewModels:TerminalViewModel}">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Title}"
                                    Margin="3"
@@ -20,16 +22,20 @@
                                 VerticalAlignment="Center"
                                 HorizontalAlignment="Center"
                                 Style="{StaticResource CloseTab}"/>
+                        <Button Content="+"
+                                Margin="3"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                Style="{StaticResource CloseTab}"/>
                     </StackPanel>
                 </DataTemplate>
             </TabControl.ItemTemplate>
             <TabControl.ContentTemplate>
                 <DataTemplate>
-                    <TextBox VerticalAlignment="Stretch"
-                             HorizontalAlignment="Stretch"
-                             TextWrapping="Wrap"
-                             Style="{StaticResource DarkTheme}"
-                             Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                    <StackPanel Orientation="Vertical">
+                        <controls:ConnectionSetting Visibility="Collapsed"/>
+                        <controls:Terminal DataContext="{Binding TerminalViewModel, UpdateSourceTrigger=PropertyChanged}"/>
+                    </StackPanel>
                 </DataTemplate>
             </TabControl.ContentTemplate>
         </TabControl>
