--- a/ServerMessaging.SampleApplication/Styles/TerminalStyles.xaml
+++ b/ServerMessaging.SampleApplication/Styles/TerminalStyles.xaml
@@ -8,4 +8,12 @@
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontStretch" Value="Expanded"/>
     </Style>
+    <Style x:Key="DarkThemeBlock"
+           TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Background" Value="Black"/>
+        <Setter Property="FontFamily" Value="Courier Prime"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontStretch" Value="Expanded"/>
+    </Style>
 </ResourceDictionary>
