--- a/ServerMessaging.Terminal/App.xaml
+++ b/ServerMessaging.Terminal/App.xaml
@@ -1,9 +1,11 @@
 ﻿<Application x:Class="ServerMessaging.Terminal.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ServerMessaging.Terminal"
+             xmlns:services="clr-namespace:ServerMessaging.Terminal.Services"
              StartupUri="Views/Windows/TerminalHost.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <services:VMLocator x:Key="Locator"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
