--- a/ServerMessaging.Terminal/Views/Windows/TerminalHost.xaml
+++ b/ServerMessaging.Terminal/Views/Windows/TerminalHost.xaml
@@ -1,12 +1,14 @@
 ﻿<Window x:Class="ServerMessaging.Terminal.Views.Windows.TerminalHost"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ServerMessaging.Terminal.Views.Windows"
         mc:Ignorable="d"
-        Title="TerminalHost" Height="450" Width="800">
+        Title="Terminal" 
+        Height="450" 
+        Width="800"
+        DataContext="{Binding Source={StaticResource Locator}, Path=TerminalHost}">
     <Grid>
-        
+        <d:Calendar/>
     </Grid>
 </Window>
